# fides

./: .coverage  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  LICENSE.md  README.md  pyproject.toml  setup.cfg  setup.py  test_cg.py
.github/workflows/: deploy_release.yaml  flake.yaml  tests.yaml
docs/: about.rst  api.rst  conf.py  index.rst  requirements.txt
docs/_templates/autosummary/: module.rst
examples/: Minimal.ipynb
fides/: __init__.py  constants.py  defaults.py  hessian_approximation.py  logging.py  minimize.py  stepback.py  steps.py  subproblem.py  trust_region.py
fides/test/: test_subproblem.py
pytr/: __init__.py  defaults.py  logging.py  minimize.py  subproblem.py  trust_region.py
tests/: test_hessian_approximation.py  test_minimize.py  test_subproblem.py
