[metadata]
name = fides
version = attr: fides.version.__version__
description = python-based Trust Region Optimization toolbox
long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/fides-dev/fides
download_url = https://github.com/fides-dev/fides/releases
project_urls =
    Bug Tracker = https://github.com/fides-dev/fides/issues
    Documentation = https://fides-optimizer.readthedocs.io/
    Changelog = https://github.com/fides-dev/fides/releases

author = The fides developers
author_email = frohlichfab@gmail.com
maintainer = Fabian Fröhlich
maintainer_email = frohlichfab@gmail.com

license = BSD-3-Clause
license_files = LICENSE

classifiers =
    Development Status :: 4 - Beta
    Topic :: Software Development :: Libraries
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.9
keywords =
    optimization
    trust-region
    systems biology

[options]
install_requires =
    numpy>=1.19.2
    scipy>=1.5.2
    h5py>=3.5.0

python_requires = >=3.9
include_package_data = True

# Where is my code
packages = find:

[options.packages.find]
include = fides*

[options.extras_require]
test =
    pytest>=5.4.2
    pytest-cov>=4.0.0
    flake8>=3.7.2

[bdist_wheel]
# Requires Python 3
universal = False

[flake8]
exclude =
    docs,

per-file-ignores =
    fides/subproblem.py:W605